# smhelper

./: .env.example  .gitignore  AGENTS.md  CODE_MAP.md  README.md  pyproject.toml
.codex/: code_map_ignore  config.toml  hooks.json
.codex/scripts/: update_code_map.py
data/: .gitkeep
docs/: live-assistant-prd.md  live-distributed-architecture.md  xhs-live-room-automation-notes.md
src/smhelper/: __init__.py  cli.py
src/smhelper/accounts/: __init__.py
src/smhelper/core/: __init__.py  clock.py  config.py  exceptions.py  ids.py
src/smhelper/live/domain/: __init__.py  (+5 more)
src/smhelper/live_assistant/: __init__.py
src/smhelper/web/: __init__.py  admin.py  api.py  app.py
src/smhelper/workers/: __init__.py
tests/: test_cli.py  test_update_code_map.py
tests/accounts/: test_platform_account.py
tests/core/: test_config.py  test_ids.py
tests/infrastructure/ai/: test_litellm_question_generator.py
tests/infrastructure/asr/: test_provider_adapter.py
tests/infrastructure/media/: test_ffmpeg_artifact_extractor.py  test_ffmpeg_tools.py
tests/live/: test_account_live_session_policy.py  test_approve_candidate_question.py  test_candidate_and_dispatch.py  test_live_task_shutdown_policy.py  test_plan_account_entries.py  test_process_segment.py  test_send_account_policy.py
tests/live_assistant/: test_cloakbrowser_login.py  test_handlers.py  test_live_assistant_cli.py  test_local_state.py
tests/web/: test_account_storage_state_api.py  test_admin_app.py  test_candidate_approve_action.py  test_live_task_observe_action.py
tests/workers/: test_rendezvous_hashing.py
(+119 files in other folders)
