[project]
name = "smhelper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "derek", email = "me@dingwenjie.org" }
]
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "celery>=5.6.3",
    "click>=8.4.1",
    "cloakbrowser>=0.3.30",
    "dynaconf>=3.2.13",
    "pydantic>=2.13.4",
    "redis>=7.4.0",
    "sqlalchemy>=2.0.50",
]

[project.scripts]
smhelper = "smhelper:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.14",
]
