[project]
name = "smhelper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "derek", email = "me@dingwenjie.org" }
]
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "celery>=5.6.3",
    "click>=8.4.1",
    "cloakbrowser>=0.3.30",
    "dynaconf>=3.2.13",
    "fastapi>=0.136.3",
    "itsdangerous>=2.2.0",
    "litellm>=1.86.2",
    "pydantic>=2.13.4",
    "redis>=7.4.0",
    "sqladmin>=0.27.0",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.48.0",
]

[project.scripts]
smhelper = "smhelper:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx2>=2.3.0",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.14",
]
